5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1885_3134.log
== TEST (2019-07-09 10:39:16) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))

m = (((v[i]**2))/n)**1/2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:39:23) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))

m = (((v[i]**2))/n)**1/2
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:39:49) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))


for i in range(size(v)):
	



m = (((v[i]**2))/n)**1/2
print(m)
-- ERROR:
File "XXXX", line 11
    m = (((v[i]**2))/n)**1/2
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:39:54) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))


for i in range(size(v)):
	



	m = (((v[i]**2))/n)**1/2
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:40:53) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (((v[i]**2))/n)**1/2
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:41:02) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (((v[i]**2))/n)**1/2
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:41:41) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (((v[i]**2))/n)**1/2
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:42:03) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[i]**2))/n**1/2
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:42:20) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[i]**2))/n**1/2
print(round(m,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:42:48) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[i]**2+v[n-1]**2))/n**1/2
print(round(m,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:42:53) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[i]**2+v[n-1]**2))/n**1/2
print(round(m,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:43:07) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[n-1]**2))/n**1/2
print(round(m,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:43:28) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[n-1]**2)/n)**1/2
print(round(m,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:43:52) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[n-1]**2 + 1)/n)**1/2
print(round(m,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:44:42) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[n-1]**2 + 1)/n)**1/2
print(round(m,n))
j = sum(v)
k = j/n
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:45:04) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[n-1]**2 + 1)/n)**1/2
print(round(m,n))
j = sum(v)
k = j/n

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:45:31) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum(v[i]**2 + 1)/n)**1/2
print(round(m,n))



j = sum(v)
k = j/n

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:45:44) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum(v[i]**2 + 1)/n)**1/2
print(round(m,n))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:45:49) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum(v[i]**2 )/n)**1/2
print(round(m,n))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:46:02) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum(v[i]**2)/n)**1/2
print(round(m,n))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:46:20) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum(v[i]**2)/n)**1/2
print(round(m,n))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:47:52) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (((v[0]**2) + (v[1]**2) + v[2]**2 + v[3] **2          )/n)**1/2
print(round(m,n))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:48:43) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (((v[0]**2) + (v[1]**2) + v[2]**2 + v[3] **2)/n4**1/2
print(round(m,n))



-- ERROR:
File "XXXX", line 8
    print(round(m,n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:48:46) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (((v[0]**2) + (v[1]**2) + v[2]**2 + v[3] **2)/4**1/2
print(round(m,n))



-- ERROR:
File "XXXX", line 8
    print(round(m,n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:48:52) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (((v[0]**2) + (v[1]**2) + v[2]**2 + v[3] **2)/4)**1/2
print(round(m,n))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:07) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[n])**2 /n)**1/2
print(round(m,n))



-- ERROR:
File "XXXX", line 8
    print(round(m,n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:22) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[n])**2 /n)**1/2
print()m



-- ERROR:
File "XXXX", line 8
    print()m
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:26) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[n])**2 /n)**1/2
print(m)



-- ERROR:
File "XXXX", line 8
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:38) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[i])**2 /n)**1/2
print(round(m,n))



-- ERROR:
File "XXXX", line 8
    print(round(m,n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:58) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[i])**2 /n)**1/2

x = round(m,n)		  
print(round(m,n))



-- ERROR:
File "XXXX", line 9
    x = round(m,n)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:51:07) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[i])**2 /n)**1/2

x = round(m,n)		  
print(x)



-- ERROR:
File "XXXX", line 9
    x = round(m,n)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:51:26) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (}(v[i])**2 /n)**1/2

x = round(m,n)		  
print(x)



-- ERROR:
File "XXXX", line 7
    m = (}(v[i])**2 /n)**1/2
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:51:30) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[i])**2 /n)**1/2

x = round(m,n)		  
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:51:35) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((v[i])**2 /n)**1/2

x = round(m,n)		  
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:51:55) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum(v[i])**2 /n)**1/2

x = round(m,n)		  
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:52:21) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum(v[i])**2 /n)**1/2
	i = i +1
x = round(m,n)		  
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:52:51) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum((v[i])**2) /n)**1/2
	i = i +1
x = round(m,n)		  
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:28:42) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = (sum((v[i])**2) /n)**1/2
	i = i +1
x = round(m,n)		  
print(x)



-- EXECUTION TIME:
1.08875
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
4.4578571
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
3.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
2.601
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:06) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[i])**2) /n)**1/2
	i = i +1
x = round(m,n)		  
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:29:20) 
-- CODE:
from numpy import*

v= array(eval(input("Vetor: ")))
n = size(v)

for i in range(size(v)):
	m = ((sum(v[i])**2) /n)**1/2
	i = i +1
x = round(m,n)		  
print(x)



-- EXECUTION TIME:
0.900778
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
4.4578571
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
3.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
2.601
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
